# next-gen-analytics

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/skills/: langchain-google-gen-ai.md
.claude/skills/langchain-google-gen-ai/: SKILL.md
.claude/skills/langchain-streamlit-dataviz/: SKILL.md
agent_demo/: agent.py  app.py  db.py  ingest.py  tools.py  viz.py
data/: History_11127185.xlsx  field_notes.csv  ~$History_11127185.xlsx
db/: schema.pg.hcl
db/migrations/: 20260416181756_initial_schema.sql  20260416210356_add_city_column.sql  20260416212715_add_iot_table.sql  atlas.sum
db/scripts/migrate/: apply.sh  generate.sh
db/scripts/schema/: inspect.sh
rag_demo/: app.py  embeddings.py  ingest.py  rag.py  retriever.py
slides/: 04-discussion-wrap-up.pptx
